fix: attempt at fixing some css layout issue with javascript, if we can solve with CSS would be better

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -47,7 +47,7 @@ html,body,.container
     width: 100%;
     background: $lighter-color;
     /*width: 75%;*/
-    min-width: 600px;
+    min-width: 440px;
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
